Run ./free-disk-space

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: free up disk space
-        run: free-disk-space.sh
+        run: ./free-disk-space.sh
 
       - name: Set up Python
         uses: actions/setup-python@v4
