--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -59,8 +59,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [pyodide-packages]
     permissions:
+      # For attestations
       id-token: write
       attestations: write
+      # For creating a release
+      contents: write
     steps:
       - name: Download artifact
         uses: actions/download-artifact@95815c38cf2ff2164869cbab79da8d1f422bc89e # v4.2.1
